feat: improve media detail page
